making padding and arrows

--- a/src/sass/layouts/_section-slider.scss
+++ b/src/sass/layouts/_section-slider.scss
@@ -2,6 +2,21 @@
 //   background-image: url('../images/slider/line.svg');
 // }
 
+.reviews {
+  padding-top: 155px;
+  padding-bottom: 170px;
+
+  @include for-size(tablet) {
+    padding-top: 280px;
+    padding-bottom: 190px;
+  }
+
+  @include for-size(desktop) {
+    padding-top: 375px;
+    padding-bottom: 232px;
+  }
+}
+
 .slide:hover,
 .slide:focus {
   outline: none;
