--- a/src/sass/utils/_slick-theme.scss
+++ b/src/sass/utils/_slick-theme.scss
@@ -113,11 +113,23 @@ $slick-opacity-not-active: 0.25 !default;
   position: absolute;
   top: 467px;
   left: 80px;
+
+  @media (min-width: 768px) {
+    top: 338px;
+    left: 280px;
+  }
+
+  @media (min-width: 1200px) {
+    top: 320px;
+    left: 490px;
+  }
+
   &:hover,
   &:focus {
-    display: block;
-    fill: #ffa5ba;
-    opacity: 1;
+    background-image: url(../images/slider/arrow-back-hover.svg);
+    // display: block;
+    // fill: #ffa5ba;
+    // opacity: 1;
   }
 
   // left: -25px;
@@ -143,10 +155,20 @@ $slick-opacity-not-active: 0.25 !default;
   position: absolute;
   top: 467px;
   right: 80px;
-  stroke: #d41443;
+
+  @media (min-width: 768px) {
+    top: 338px;
+    right: 280px;
+  }
+
+  @media (min-width: 1200px) {
+    top: 320px;
+    right: 490px;
+  }
 
   &:hover,
   &:focus {
+    background-image: url(../images/slider/arrow-next-hover.svg);
     stroke: #ffa5ba;
   }
   // right: -25px;
