adds styles to hero-about block

--- a/src/sass/hero/_hero-container.scss
+++ b/src/sass/hero/_hero-container.scss
@@ -1,3 +1,39 @@
 .hero-container {
   background-color: getColor('heroBgrd');
 }
+
+.hero-about {
+  width: 218px;
+}
+
+.hero-text {
+  font-family: $secondary-font;
+  @include fonts(400, 26px, 1.15, 0.04em);
+  text-transform: uppercase;
+  color: getColor('textLight');
+}
+
+.text-red {
+  font-family: $secondary-font;
+  @include fonts(400, 48px, 0.96, 0.04em);
+  text-transform: uppercase;
+  color: getColor('accent');
+}
+
+.btn-hero {
+  font-family: $main-font;
+  @include fonts(400, 8px, 1.25, 0em);
+  color: getColor('accent');
+  background-color: getColor('textLight');
+  border-radius: 20px;
+  border-color: transparent;
+  padding-left: 15px;
+  padding-right: 15px;
+  height: 24px;
+
+  &:hover,
+  &:focus {
+    background-color: getColor('accent');
+    color: getColor('textLight');
+  }
+}
