Законченая стилизация под мобил и табл секции Продукты

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,84 +1,99 @@
 <section class="products">
   <div class="container container-products">
     <p class="products-slogan">100% natural<pз>
-    <h2 class="products-title">Products</h2>
-   
-    <ul class="list products-list">
-      <li class="products-gallery products-one">
-        <h3 class="products-gallery-title">ice cream</h3>
-        <div class="products-ellipsis">
-          <div class="products-circle">
-          </div>
-          <div class="products-circle">
-          </div>
-          <div class="products-circle">
-          </div>
-        </div>
+        <h2 class="products-title">Products</h2>
 
-        <p class="products-gallery-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna
-        aliqua facilisis.</p>
-       
-          <picture class="products-foto">
-            <source srcset="
-                  ../src/images/products/mobile/product-1.png 1x,
-                  ../src/images/products/mobile/product-1@2x.png 2x"
-                   media="(min-width: 320px) and (max-width: 767px)" />
-                  <img src="../src/images/products/mobile/product-1.png" />
-          </picture>
-          <!-- <div class="product">
-            <svg>
-              <use href="./imagens/sprite.svg#icon-bracket-right" ></use>
-            </svg>
-          </div> -->
+        <ul class="list products-list">
+          <li class="products-gallery products-one">
+            <h3 class="products-gallery-title">ice cream</h3>
+            <div class="products-ellipsis">
+              <div class="products-circle">
+              </div>
+              <div class="products-circle">
+              </div>
+              <div class="products-circle">
+              </div>
+            </div>
 
-        
-      </li>
-      <li class="products-gallery products-two">
-        <h3 class="products-gallery-title">ice coffee</h3>
-        <div class="products-ellipsis">
-          <div class="products-circle">
-          </div>
-          <div class="products-circle">
-          </div>
-          <div class="products-circle">
-          </div>
-        </div>
-        <p class="products-gallery-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore
-          magna
-          aliqua facilisis.</p>
-          <picture class="products-foto">
-            <source srcset="
-                            ../src/images/products/mobile/product-2.png 1x,
-                            ../src/images/products/mobile/product-2@2x.png 2x"
-              media="(min-width: 320px) and (max-width: 767px)" />
-            <img src="../src/images/products/mobile/product-2.png" />
-          </picture>
-       
-      </li>
-      <li class="products-gallery products-three">
-        <h3 class="products-gallery-title">milkshakes</h3>
-        <div class="products-ellipsis">
-          <div class="products-circle">
-          </div>
-          <div class="products-circle">
-          </div>
-          <div class="products-circle">
-          </div>
-        </div>
-        <p class="products-gallery-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore
-          magna
-          aliqua facilisis.</p>
-          <picture class="products-foto">
-            <source srcset="
-                            ../src/images/products/mobile/product-3.png 1x,
-                            ../src/images/products/mobile/product-3@2x.png 2x"
-              media="(min-width: 320px) and (max-width: 767px)" />
-            <img src="../src/images/products/mobile/product-3.png" />
-          </picture>
-       
-      </li>
-    </ul>
-    
+            <p class="products-gallery-text arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et. dolore magna
+              aliqua facilisis.</p>
+              <p class="products-gallery-text-short arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et.</p>
+
+            <picture class="products-foto products-foto-first">
+              <source srcset="
+                  ./images/products/mobile/product-1.png 1x,
+                  ./images/products/mobile/product-1@2x.png 2x" media="(min-width: 320px) and (max-width: 767px)" />
+
+                    <source srcset="
+                          ./images/products/tablet/product-1.png    1x,
+                          ./images/products/tablet/product-1@2x.png 2x
+                        " media="(min-width: 768px) and (max-width: 1199px)" />
+                    <source srcset="
+                          ./images/products/desktop/product-1.png    1x,
+                          ./images/products/desktop/product-1@2x.png 2x
+                        " media="(min-width: 1200px)" />
+                  
+              <img class="" srcset="
+                    ./images/products/mobile/product-1.png    1x,
+                    ./images/products/mobile/product-1@2x.png 2x
+                  " src="./images/products/mobile/product-1.png" alt="ice cream" />
+            </picture>          
+
+          </li>
+          <li class="products-gallery products-two">
+            <h3 class="products-gallery-title">ice coffee</h3>
+            <div class="products-ellipsis">
+              <div class="products-circle">
+              </div>
+              <div class="products-circle">
+              </div>
+              <div class="products-circle">
+              </div>
+            </div>
+            <p class="products-gallery-text arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et. dolore magna
+              aliqua facilisis.</p>
+            <p class="products-gallery-text-short arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod
+              tempor incididunt ut labore et.</p>
+            <picture class="products-foto products-foto-second">
+
+              <source srcset="
+                            ./images/products/mobile/product-2.png 1x,
+                            ./images/products/mobile/product-2@2x.png 2x"
+                media="(min-width: 320px) and (max-width: 767px)" />
+              <img src="./images/products/mobile/product-2.png" />
+            </picture>
+
+          </li>
+          <li class="products-gallery products-three">
+            <h3 class="products-gallery-title">milkshakes</h3>
+            <div class="products-ellipsis">
+              <div class="products-circle">
+              </div>
+              <div class="products-circle">
+              </div>
+              <div class="products-circle">
+              </div>
+            </div>
+            <p class="products-gallery-text arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et. dolore magna
+              aliqua facilisis.</p>
+            <p class="products-gallery-text-short arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod
+              tempor incididunt ut labore et.</p>
+            <picture class="products-foto products-foto-third">
+              <source srcset="
+                            ./images/products/mobile/product-3.png 1x,
+                            ./images/products/mobile/product-3@2x.png 2x"
+                media="(min-width: 320px) and (max-width: 767px)" />
+              <img src="./images/products/mobile/product-3.png" />
+            </picture>            
+          </li>
+        </ul>
+
   </div>
 </section>
 
