--- a/src/sass/hero/_hero-container.scss
+++ b/src/sass/hero/_hero-container.scss
@@ -4,6 +4,14 @@
 
 .hero-about {
   width: 218px;
+
+  @include for-size(tablet) {
+    width: 162px;
+  }
+
+  @include for-size(desktop) {
+    width: 277px;
+  }
 }
 
 .hero-text {
@@ -11,6 +19,14 @@
   @include fonts(400, 26px, 1.15, 0.04em);
   text-transform: uppercase;
   color: getColor('textLight');
+
+  @include for-size(tablet) {
+    @include fonts(400, 22px, 1.14, 0.04em);
+  }
+
+  @include for-size(desktop) {
+    @include fonts(400, 38px, 1.15, 0.04em);
+  }
 }
 
 .text-red {
@@ -18,6 +34,14 @@
   @include fonts(400, 48px, 0.96, 0.04em);
   text-transform: uppercase;
   color: getColor('accent');
+
+  @include for-size(tablet) {
+    @include fonts(400, 34px, 0.91, 0.04em);
+  }
+
+  @include for-size(desktop) {
+    @include fonts(400, 58px, 0.91, 0.04em);
+  }
 }
 
 .btn-hero {
@@ -35,5 +59,12 @@
   &:focus {
     background-color: getColor('accent');
     color: getColor('textLight');
+  }
+
+  @include for-size(desktop) {
+    @include fonts(400, 14px, 1.28, 0em);
+    height: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
