Подключил слайдер в main

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,8 +11,7 @@
 @import './layouts/section-header';
 @import './layouts/section-hero';
 @import './layouts/section-composition';
+@import './layouts/section-slider';
 @import './layouts/section-locations';
 @import './layouts/locations-list';
 @import './layouts/section-footer';
-
-
