--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,8 +1,28 @@
 <section class="manufacture">
     <div class="manufacture-container">
-        <h2 class="manufacture-title">
-            <span class="manufacture-sub-title"></span>
+        <h2 class="manufacture-title">tradition and love
+            <span class="manufacture-sub-title">how it’s made?</span>
         </h2>
+        <div class="manufacture-column">
+            <ul class="manufacture-list">
+                <li class="manufacture-item">
+
+                </li>
+                <li class="manufacture-item">
+                    <p class="manufacture-first-text">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel
+                        justo
+                        cursus, faucibus lorem eget, egestas eros.
+                        Maecenas eleifend erat at justo fringilla.</p>
+                    <p class="manufacture-second-text">Curabitur lacinia enim at ex blandit, vel pellentesque odio
+                        elementum. Mauris rhoncus orci in imperdiet placerat.
+                        Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+                        tincidunt.
+
+
+                        Aliquam erat volutpat. Aenean accumsan.</p>
+                </li>
+            </ul>
+        </div>
     </div>
 
 </section>
