--- a/src/sass/config/_color-scheme.scss
+++ b/src/sass/config/_color-scheme.scss
@@ -19,6 +19,7 @@ $secondary-title-color: #ffa5ba;
 // цвета фона для наведения и акцентирования
 $primary-accent-color: #d41342;
 $secondary-accent-color: #ecebeb;
+$demarcation-accent-color: #fff9f7;
 
 // цвет фона, в т.ч. плавающих
 $header-bg-color: #ffb8ca;
@@ -37,4 +38,4 @@ $primary-overlay-decor-color: #f0d1a5;
 $secondary-overlay-decor-color: #c2e297;
 $alternate-overlay-decor-color: #ffb8ca;
 
-$color-icon: #FEA5BB;
+$color-icon: #fea5bb;
