tablet version done

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,58 +1,233 @@
 <section class="header">
-    <div class="content-container overlay">
-        <ul class="header-layout">
-            <li class="header-layout-item">
-                <a class="link" href="./"><picture>
-                    <source srcset="./images/logo.png 1x, ./images/logo@2x.png 2x" media="(min-width: 320px)">
-                    <img class="image logo" src="./images/logo.png" alt="logo" width="200" />
-                </picture></a>
-            </li>
-            <li class="header-layout-item"></li>
-            <li class="header-layout-item">
-                <button class="menu-btn" aria-expanded="false" aria-controls="menu-container" data-menu-button>
-                    <svg class="menu-icon" aria-label="Переключатель мобильного меню">
-                        <use class="menu-burger" href="./images/sprite.svg#icon-Burger"></use>
-                        <use class="menu-close" href="./images/sprite.svg#icon-close"></use>
-                    </svg>
-                </button>
-                <div class="menu-container" id="menu-container" data-menu>
-                <button class="btn header-btn" type="button">
-                    Buy now
-                    <svg class="header-btn-icon">
-                        <use href="./images/sprite.svg#icon-bracket"></use>
-                    </svg>
-                </button>
-                <nav class="site-nav">
-                    <ul class="site-nav-list">
-                        <li class="site-nav-item"><a class="link site-nav-link current" href="">Home</a></li>
-                        <li class="site-nav-item"><a class="link site-nav-link" href="#slider">About us</a></li>
-                        <li class="site-nav-item"><a class="link site-nav-link" href="#tradition">How it’s made?</a></li>
-                        <li class="site-nav-item"><a class="link site-nav-link" href="#products">Our products</a></li>
-                        <li class="site-nav-item"><a class="link site-nav-link" href="#outlets">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-            </li>
-            <li class="header-layout-item"></li>
-        </ul>
-        <div class="content-container hero">
-            <div class="hero-title-container">
-                <h1 class="hero-title"><span class="hero-accent">ice cream made with</span>passion</h1>
-                <button class="hero-btn hero-btn-accent">Products</button>
-                <button class="hero-btn">How it’s made?</button>
-            </div>
-            <div class="icecr-bg">
-                <picture>
-                    <source srcset="./images/3-desktop/header-ice-cream.webp 1x, ./images/3-desktop/header-ice-cream@2x.webp 2x" media="(min-width: 1200px)">
-                    <source srcset="./images/2-tablet/header-ice-cream.webp 1x, ./images/2-tablet/header-ice-cream@2x.webp 2x" media="(min-width: 768px)">
-                    <source srcset="./images/1-mobile/header-ice-cream.webp 1x, ./images/1-mobile/header-ice-cream@2x.webp 2x" media="(max-width: 767px)">
-                    <source srcset="./images/3-desktop/header-ice-cream.png 1x, ./images/3-desktop/header-ice-cream@2x.png 2x" media="(min-width: 1200px)">
-                    <source srcset="./images/2-tablet/header-ice-cream.png 1x, ./images/2-tablet/header-ice-cream@2x.png 2x" media="(min-width: 768px)">
-                    <source srcset="./images/1-mobile/header-ice-cream.png 1x, ./images/1-mobile/header-ice-cream@2x.png 2x" media="(max-width: 767px)">
-                    <img class="image img-icecr" src="./images/1-mobile/header-ice-cream.png" alt="logo" width="236" />
-                </picture>
-            </div>
+  <div class="content-container overlay">
+    <ul class="header-layout">
+      <li class="header-layout-item">
+        <a class="link" href="./"
+          ><picture>
+            <source
+              srcset="./images/logo.png 1x, ./images/logo@2x.png 2x"
+              media="(min-width: 320px)"
+            />
+            <img
+              class="image logo"
+              src="./images/logo.png"
+              alt="logo"
+              width="200"
+            /> </picture
+        ></a>
+        <button class="btn header-btn positioned-btn" type="button">
+          Buy now
+          <svg class="header-btn-icon">
+            <use href="./images/sprite.svg#icon-bracket"></use>
+          </svg>
+        </button>
+      </li>
+      <li class="header-layout-item">
+        <div class="menu-container" id="menu-container" data-menu>
+          <button class="btn header-btn" type="button">
+            Buy now
+            <svg class="header-btn-icon">
+              <use href="./images/sprite.svg#icon-bracket"></use>
+            </svg>
+          </button>
+          <nav class="site-nav">
+            <ul class="site-nav-list">
+              <li class="site-nav-item">
+                <a class="link site-nav-link current" href="">Home</a>
+              </li>
+              <li class="site-nav-item">
+                <a class="link site-nav-link" href="#slider">About us</a>
+              </li>
+              <li class="site-nav-item">
+                <a class="link site-nav-link" href="#tradition"
+                  >How it’s made?</a
+                >
+              </li>
+              <li class="site-nav-item">
+                <a class="link site-nav-link" href="#products">Our products</a>
+              </li>
+              <li class="site-nav-item">
+                <a class="link site-nav-link" href="#outlets">Contact</a>
+              </li>
+            </ul>
+          </nav>
         </div>
+        <button
+          class="menu-btn"
+          aria-expanded="false"
+          aria-controls="menu-container"
+          data-menu-button
+        >
+          <svg class="menu-icon" aria-label="Переключатель мобильного меню">
+            <use
+              class="menu-burger"
+              href="./images/sprite.svg#icon-Burger"
+            ></use>
+            <use class="menu-close" href="./images/sprite.svg#icon-close"></use>
+          </svg>
+        </button>
+      </li>
+    </ul>
+    <div class="content-container hero">
+      <div class="hero-title-container">
+        <h1 class="hero-title">
+          <span class="hero-accent">ice cream made with</span>passion
+        </h1>
+        <button class="hero-btn hero-btn-accent">Products</button>
+        <button class="hero-btn">How it’s made?</button>
+      </div>
+      <ul class="statistics">
+        <li class="statistics-item">
+          <span class="statistics-number"> 16 </span>
+          <span class="statistics-text">cafes</span>
+        </li>
+        <li class="statistics-item">
+          <span class="statistics-number"> 23 </span>
+          <span class="statistics-text">food trucks</span>
+        </li>
+      </ul>
+      <div class="hero-milk">
+        <picture>
+          <source
+            srcset="
+              ./images/3-desktop/header-milk.webp    1x,
+              ./images/3-desktop/header-milk@2x.webp 2x
+            "
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
+              ./images/2-tablet/header-milk.webp    1x,
+              ./images/2-tablet/header-milk@2x.webp 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
+              ./images/3-desktop/header-milk.png    1x,
+              ./images/3-desktop/header-milk@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
+              ./images/2-tablet/header-milk.png    1x,
+              ./images/2-tablet/header-milk@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            class="image img-milk"
+            src="./images/2-tablet/header-milk.png"
+            alt="logo"
+            width="120"
+          />
+        </picture>
+        <div class="div-milk">
+          <p class="div-milk-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et
+          </p>
+          <button class="div-milk-btn" type="button">
+            <svg class="div-milk-btn-icon">
+              <use href="./images/sprite.svg#icon-arrow-right"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
+
+      <div class="icecr-bg">
+        <picture>
+          <source
+            srcset="
+              ./images/3-desktop/header-ice-cream.webp    1x,
+              ./images/3-desktop/header-ice-cream@2x.webp 2x
+            "
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
+              ./images/2-tablet/header-ice-cream.webp    1x,
+              ./images/2-tablet/header-ice-cream@2x.webp 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
+              ./images/1-mobile/header-ice-cream.webp    1x,
+              ./images/1-mobile/header-ice-cream@2x.webp 2x
+            "
+            media="(max-width: 767px)"
+          />
+          <source
+            srcset="
+              ./images/3-desktop/header-ice-cream.png    1x,
+              ./images/3-desktop/header-ice-cream@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
+              ./images/2-tablet/header-ice-cream.png    1x,
+              ./images/2-tablet/header-ice-cream@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
+              ./images/1-mobile/header-ice-cream.png    1x,
+              ./images/1-mobile/header-ice-cream@2x.png 2x
+            "
+            media="(max-width: 767px)"
+          />
+          <img
+            class="image img-icecr"
+            src="./images/1-mobile/header-ice-cream.png"
+            alt="logo"
+            width="236"
+          />
+        </picture>
+      </div>
+
+      <div class="header-girl">
+        <picture>
+          <source
+            srcset="
+              ./images/3-desktop/header-girl.webp    1x,
+              ./images/3-desktop/header-girl@2x.webp 2x
+            "
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
+              ./images/2-tablet/header-girl.webp    1x,
+              ./images/2-tablet/header-girl@2x.webp 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
+              ./images/3-desktop/header-girl.png    1x,
+              ./images/3-desktop/header-girl@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
+              ./images/2-tablet/header-girl.png    1x,
+              ./images/2-tablet/header-girl@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            class="image img-girl"
+            src="./images/2-tablet/header-girl.png"
+            alt="logo"
+            width="168"
+          />
+        </picture>
+      </div>
     </div>
-    <script src="./js/menu.js"></script>
+  </div>
+  <script src="./js/menu.js"></script>
 </section>
