--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -33,13 +33,13 @@ p {
   margin: 0;
 }
 .content-container {
-  width: 320px;
+  min-width: 320px;
   padding-left: 20px;
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
   @media screen and(min-width:768px) {
-    width: 768px;
+    min-width: 768px;
     padding-left: 34px;
     padding-right: 34px;
   }
